--- a/Practice/03_12/index.html
+++ b/Practice/03_12/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practice: Making classes and objects</title>
-    <script type="module" src="Backpack.js"></script>
-    <script type="module" src="script.js"></script>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Practice: Making classes and objects</title>
+
+</head>
+
+<body>
+  <script type="module" src="script.js"></script>
+</body>
+
 </html>
